# see-my-vest

./: README.md  parse_decimal.py  pyproject.toml  see_my_vest.py  vesting_types.py
tests/: test_csv.py  test_e2e.py  test_parse_decimal.py  test_vest_csv_input.py
tests/csv_data/: example1.csv  example1_disordered.csv  example2.csv  example4.csv  example_bad.csv  expected2_2021-01-01.csv  expected3_2021-01-01.csv
