[tool.poetry]
name = "see_my_vest"
version = "0.1.0"
description = ""
authors = ["Alan Gerber"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
dataclass-csv = "^1.3.0"
pendulum = "^2.1.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
